finished getVideoGame method

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <form>
         <fieldset>
             <legend>Add a Video Game</legend>
-            <input type="text" for="title" placeholder="Title">
+            <input type="text" id="title" placeholder="Title">
             <br>
-            <input type="text" for="price" placeholder = Price>
+            <input type="text" id="price" placeholder = Price>
             <br>
             
             <label for="rating">Rating:</label>
