display games list

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
             <label for="online">Online only?</label>
             <input type="checkbox" id="online">
             <br>
-            <button>Add Game</button>
+            <button type="button">Add Game</button>
         </fieldset>
     </form>
+
+    <div id="display"></div>
     <script src="js/main.js"></script>
 </body>
 </html>
