--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Add Product Form</title>
 </head>
 <body>
-    <h1>Add Video Game</h1>
-    
+    <h1>Video Game List</h1>
+    <p></p>
     <form>
         <fieldset>
             <legend>Add a Video Game</legend>
